--- a/SpainCosplay3/app/src/main/res/layout/acercade.xml
+++ b/SpainCosplay3/app/src/main/res/layout/acercade.xml
@@ -22,7 +22,7 @@
         android:id="@+id/TextViewAcercaDe2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="cotero91@hotmail.es "
+        android:text="spaincosplay@coterodev.esy.es"
         android:textColor="@android:color/white">
     </TextView>
 </LinearLayout>
