--- a/SpainCosplay3/app/src/main/res/layout/login.xml
+++ b/SpainCosplay3/app/src/main/res/layout/login.xml
@@ -22,18 +22,17 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/usuario"
-            android:text="pol"/>
+            android:text=""/>
         <EditText
             android:layout_width="280dp"
             android:layout_height="35dp"
             android:id="@+id/email"
-            android:inputType="textEmailAddress"
             android:gravity="center"
             android:layout_marginTop="9dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/correo"
-            android:text="pol"/>
+            android:text="" />
 
         <EditText
             android:layout_width="280dp"
@@ -46,7 +45,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/password"
-            android:text="polseña"/>
+            android:text=""/>
 
     </LinearLayout>
 
@@ -54,10 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:id="@+id/iniciarSesion"
-        android:layout_gravity="center_horizontal"
-        android:background="@android:color/transparent"/>
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:layout_width="wrap_content"
