Dandole a los Eventos
Creada la Tabla Eventos
-Se cargaron 3 eventos diferentes
-los obtenemos ahora en arrays, que luego transformamos en JSON.
-Ahora estamos intentando llenar un listview con ello

Vamos Carlos !

--- a/SpainCosplay3/app/src/main/res/layout/app_bar_main.xml
+++ b/SpainCosplay3/app/src/main/res/layout/app_bar_main.xml
@@ -22,6 +22,6 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
-    <include layout="@layout/contenido_listview" />
+    <!--<include layout="@layout/contenido_listview" />-->
 
 </android.support.design.widget.CoordinatorLayout>
