--- a/SpainCosplay3/app/src/main/res/layout/acercade.xml
+++ b/SpainCosplay3/app/src/main/res/layout/acercade.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,21 +11,37 @@
         android:id="@+id/TextViewAcercaDe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Spain Cosplay"
+        android:text="@string/app_name"
         android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:layout_marginTop="450dp">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="92dp">
     </TextView>
+
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:id="@+id/TextViewAcercaDe2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="spaincosplay@coterodev.esy.es"
-        android:textColor="@android:color/white">
+        android:text="@string/app_email"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="40dp"
+        android:layout_alignTop="@+id/TextViewAcercaDe"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
     </TextView>
-</LinearLayout>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
 
 
 
