--- a/SpainCosplay3/app/src/main/res/layout/eventos_layout.xml
+++ b/SpainCosplay3/app/src/main/res/layout/eventos_layout.xml
@@ -2,13 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Eventos"
-        android:gravity="center"
-        android:layout_margin="10px"
-        android:textSize="10pt"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dip"
@@ -17,7 +10,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@android:id/list"
-            android:drawSelectorOnTop="false"/>
+            android:drawSelectorOnTop="false"
+            android:background="@color/colorPrimary"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
