Mantener sesion iniciada
Funcionando la sesion iniciada. Hay que comprobar con la pagina web si
la informacion es correcta si es correcta vamos a la aplicacion si es
incorrecta al login.

--- a/SpainCosplay3/app/src/main/res/layout/login.xml
+++ b/SpainCosplay3/app/src/main/res/layout/login.xml
@@ -47,6 +47,14 @@
             android:background="@drawable/password"
             android:text=""/>
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mantener la sesion iniciada"
+            android:id="@+id/checkBoxLogin"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ffffff" />
+
     </LinearLayout>
 
     <Button
