--- a/SpainCosplay3/app/src/main/res/layout/principal_layout2.xml
+++ b/SpainCosplay3/app/src/main/res/layout/principal_layout2.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="30dp"
-    android:background="@color/colorPrimaryDark">
+    android:background="@drawable/large">
 
-    <TextView
+    <!--<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Spain Cosplay"
@@ -16,21 +16,25 @@
         android:gravity="center"
         android:textSize="25dp"
         android:layout_marginBottom="20sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white"
+        android:layout_gravity="center_horizontal" /> -->
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:text="@string/eventosBtn"
-        android:id="@+id/verEventos"/>
+        android:id="@+id/verEventos"
+        android:background="@drawable/botonprincipal"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:text="@string/ajustesBtn"
-        android:id="@+id/ajustes" />
+        android:id="@+id/ajustes"
+        android:background="@drawable/botonprincipal"/>
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:text="@string/salirBtn"
-        android:id="@+id/salir"/>
+        android:id="@+id/salir"
+        android:background="@drawable/botonprincipal"/>
 </LinearLayout>
