--- a/SpainCosplay3/app/src/main/res/layout/registro.xml
+++ b/SpainCosplay3/app/src/main/res/layout/registro.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register">
+    android:background="@color/colorPaula"
+    android:weightSum="1">
 
 
     <TextView
@@ -23,7 +24,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:padding="20dp">
+        android:padding="20dp"
+        android:layout_weight="0.56">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -142,6 +144,9 @@
             android:layout_height="wrap_content"
             android:text="Aceptar"
             android:id="@+id/registarUsuarioBtn"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:textColor="@android:color/white"
+            android:background="@color/colorPaulaComplementario"/>
     </LinearLayout>
 </LinearLayout>
