--- a/SpainCosplay3/app/src/main/res/layout/splash.xml
+++ b/SpainCosplay3/app/src/main/res/layout/splash.xml
@@ -12,4 +12,12 @@
         android:scaleType="fitXY"
         android:src="@drawable/splash" />
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar2"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="112dp" />
+
 </RelativeLayout>
