--- a/SpainCosplay3/app/src/main/res/layout/objeto_lista.xml
+++ b/SpainCosplay3/app/src/main/res/layout/objeto_lista.xml
@@ -2,6 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@android:color/white">
+    android:textColor="@android:color/white"
+    android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:gravity="center_vertical"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall" >
 
 </TextView>
