--- a/SpainCosplay3/app/src/main/res/layout/principal_layout2.xml
+++ b/SpainCosplay3/app/src/main/res/layout/principal_layout2.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spain Cosplay"
+        android:text="@string/app_name"
         android:id="@+id/tituloprincipal"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:layout_marginBottom="20sp"
         android:textColor="@android:color/white" />
 
@@ -27,11 +27,19 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/ajustesBtn"
-        android:id="@+id/ajustes"
+        android:text="@string/acercade"
         android:textColor="@android:color/white"
-        android:background="@color/colorPaulaComplementario"
-        android:layout_marginTop="5dp"/>
+        android:id="@+id/acerca_de"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorPaulaComplementario"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/cerrarSesion"
+        android:textColor="@android:color/white"
+        android:id="@+id/cerrar_sesion"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorPaulaComplementario"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
