--- a/SpainCosplay3/app/src/main/res/menu/main.xml
+++ b/SpainCosplay3/app/src/main/res/menu/main.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/acerca_de"
         android:orderInCategory="100"
-        android:title="@string/string_acercade"
+        android:title="@string/acercade"
         />
 </menu>
