--- a/SpainCosplay3/app/src/main/res/layout/acercade.xml
+++ b/SpainCosplay3/app/src/main/res/layout/acercade.xml
@@ -3,43 +3,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/working"
+    android:background="@color/colorPaula"
     android:orientation="vertical">
-    <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:id="@+id/TextViewAcercaDe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="92dp">
-    </TextView>
 
-    <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:orientation="vertical"
-        android:id="@+id/TextViewAcercaDe2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/app_email"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="40dp"
-        android:layout_alignTop="@+id/TextViewAcercaDe"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-    </TextView>
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:src="@drawable/icono"
+            android:contentDescription="@string/app_email" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/app_name"
+            android:id="@+id/textView2"
+            android:textColor="@android:color/white"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/app_email"
+            android:id="@+id/textView3"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
 
 </RelativeLayout>
 
