--- a/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
@@ -12,7 +12,7 @@
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Proximos Eventos"
+        android:text="@string/proximos"
         android:layout_marginTop="20dp"
         android:id="@+id/textView4" />
 
