--- a/SpainCosplay3/app/src/main/res/layout/activity_informacion_evento.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_informacion_evento.xml
@@ -50,7 +50,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_marginBottom="5dp">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
