--- a/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
@@ -16,6 +16,30 @@
         android:layout_marginTop="20dp"
         android:id="@+id/textView4" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:layout_marginRight="5dp">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="19dp"
+            android:layout_height="17dp"
+            android:background="@android:drawable/arrow_down_float"
+            android:id="@+id/button" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:text="@string/order"
+            android:id="@+id/textView5"
+            />
+    </LinearLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
