--- a/SpainCosplay3/app/src/main/res/layout/activity_informacion_evento.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_informacion_evento.xml
@@ -21,13 +21,15 @@
         android:layout_height="400dp"
         android:id="@+id/InfCartelEvento"
         android:contentDescription="@string/cartelEvento"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:clickable="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPaulaComplementario">
+        android:layout_height="match_parent"
+        android:background="@color/colorPaulaComplementario"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -51,7 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="3dp"
+            android:id="@+id/ruta">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -63,12 +66,10 @@
                 android:textAlignment="center"/>
 
             <Button
-                android:layout_width="55dp"
-                android:layout_height="wrap_content"
+                android:layout_width="64px"
+                android:layout_height="64px"
                 android:id="@+id/InfgeoLocaBtn"
-                android:background="@android:drawable/ic_dialog_map"
-                android:backgroundTint="#ffffff" />
-
+                android:background="@drawable/gmaps" />
         </LinearLayout>
 
 
