--- a/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
+++ b/SpainCosplay3/app/src/main/res/layout/activity_lista_eventos.xml
@@ -16,12 +16,13 @@
         android:layout_marginTop="20dp"
         android:id="@+id/textView4" />
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:layout_marginRight="5dp">
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="10dp">
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -33,18 +34,26 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@android:color/white"
             android:text="@string/order"
             android:id="@+id/textView5"
             />
-    </LinearLayout>
+    </LinearLayout>-->
+
+    <Button
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:background="@android:drawable/ic_dialog_info"
+        android:id="@+id/informacionBtn"
+        android:layout_gravity="right"
+        android:layout_marginRight="30dp"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPaula"
-        android:padding="30dp">
+        android:padding="25dp">
 
         <ListView
             android:layout_width="match_parent"
